--- a/webapp/app.css
+++ b/webapp/app.css
@@ -3338,6 +3338,13 @@ a:hover {
 .messagesList > div {
   margin: 0 10px;
 }
+@media screen and (max-width: 479px) {
+  .messagesList > div {
+    width: calc(100%-20px);
+    max-width: calc(100%-20px);
+    overflow: hidden;
+  }
+}
 .messagesList .msg {
   word-wrap: break-word;
   margin-bottom: 1em;
